// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vue/UITextarea renders correctly - autocomplete off 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"off\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - basic 1`] = `
"<div class=\\"ui-textarea ui-textarea--large\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - disabled 1`] = `
"<div class=\\"ui-textarea ui-textarea--disabled\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" disabled=\\"disabled\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - readonly 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" readonly=\\"readonly\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with cols and rows 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" cols=\\"10\\" rows=\\"50\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with helper 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div> <span class=\\"ui-textarea__helper\\"> Text </span>
</div>"
`;

exports[`vue/UITextarea renders correctly - with id 1`] = `
"<div id=\\"test\\" class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with label 1`] = `
"<div class=\\"ui-textarea\\"><label for=\\"z8a8d7a5zad4\\" class=\\"ui-textarea__label\\"><strong>Text</strong></label>
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with listeners 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with maxlength 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" maxlength=\\"10\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with placeholder 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" placeholder=\\"text\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with transform 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" maxlength=\\"10\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;

exports[`vue/UITextarea renders correctly - with value 1`] = `
"<div class=\\"ui-textarea\\">
  <!---->
  <div class=\\"ui-textarea__wrapper\\"><textarea id=\\"z8a8d7a5zad4\\" name=\\"test\\" autocomplete=\\"on\\" class=\\"ui-textarea__wrapper__field\\"></textarea></div>
  <!---->
</div>"
`;
